Adjusted and finalized multifiltration logic