@@ -16,8 +16,8 @@ public class IncomeReportColumnCalculator {
         // Создаём параметры обработки
         ProcessingParameters parameters = new ProcessingParameters(
                 "/Users/GiorUg/Desktop/Desktop PC bis 2023/2024CompleteReportTransaktions.xlsx",
-                "01.08.2024 00:00:00",
-                "10.10.2024 23:59:59",
+                "12.11.2024 00:00:00",
+                "12.11.2024 23:59:59",
                 "dd.MM.yyyy HH:mm:ss"
         );
 
@@ -37,9 +37,13 @@ public class IncomeReportColumnCalculator {
             // Настраиваем фильтры для нескольких колонок
             MultiColumnFilter multiColumnFilter = new MultiColumnFilter();
             Map<String, List<String>> columnFilters = new HashMap<>();
-            columnFilters.put("Typ", Arrays.asList("Servicegebühr", "Verbindlichkeit", "Erstattung")); // Фильтры для "Typ"
-            columnFilters.put("Versand", Arrays.asList("Amazon",""));        // Фильтры для "Versand"
-            //columnFilters.put("Beschreibung", Arrays.asList(null, null));
+//            columnFilters.put("Typ", List.of("Servicegebühr", "Verbindlichkeit", "Erstattung")); // Фильтры для "Typ"
+//            columnFilters.put("Versand", Arrays.asList("Amazon"));        // Фильтры для "Versand"
+//            columnFilters.put("Beschreibung", Arrays.asList(null, null));
+
+            columnFilters.put("Typ", List.of("Servicegebühr", "Verbindlichkeit", "Erstattung","Bestellung"));
+            columnFilters.put("Versand", List.of("Amazon","Verkäufer"));
+            columnFilters.put("Ort der Bestellung", List.of("Aachen"));
 
             // Фильтрация по колонкам
             List<Map<String, String>> multiFilteredData = multiColumnFilter.filterByColumns(columnFilters, filteredData);
@@ -47,7 +51,7 @@ public class IncomeReportColumnCalculator {
             SummationProcessor summationProcessor = new SummationProcessor();
             Map<String, Map<String, Double>> sums = summationProcessor.calculateSums(
                     multiFilteredData,
-                    List.of("Verkaufsgebühren", "Gesamt")
+                    List.of("Steuer auf Aktionsrabatte", "Verkaufsgebühren")
             );
 
 // Вывод результатов
